修改顶部返回按钮

--- a/dishmap/src/main/res/layout/title_bar_layout.xml
+++ b/dishmap/src/main/res/layout/title_bar_layout.xml
@@ -17,11 +17,11 @@
             android:layout_alignParentBottom="true">
                 <ImageView
                     android:id="@+id/title_back_iv"
-                    android:layout_width="@dimen/x24"
+                    android:layout_width="@dimen/x54"
                     android:layout_height="@dimen/y40"
                     android:src="@mipmap/back"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="@dimen/x30"
+                    android:paddingLeft="@dimen/x30"
                     />
 
 
