修改首页底部图标

--- a/dishmap/src/main/res/layout/activity_main.xml
+++ b/dishmap/src/main/res/layout/activity_main.xml
@@ -25,10 +25,10 @@
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:layout_alignParentBottom="true"
-            android:drawableTop="@mipmap/home_no_selet"
+            android:drawableTop="@mipmap/home_no_selected_icon"
             android:paddingLeft="@dimen/x82"
             android:paddingRight="@dimen/x20"
-            android:drawablePadding="@dimen/y8"
+            android:drawablePadding="@dimen/y3"
             android:textSize="@dimen/small_text_size"
             android:text="首页"
             />
@@ -40,10 +40,10 @@
             android:textColor="@color/white"
             android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"
-            android:drawablePadding="@dimen/y8"
+            android:drawablePadding="0dp"
             android:paddingRight="@dimen/x20"
             android:paddingLeft="@dimen/x20"
-            android:drawableTop="@mipmap/coupon_no_select"
+            android:drawableTop="@mipmap/coupon_no_selected_icon"
             android:textSize="@dimen/small_text_size"
             android:text="优惠券"
             />
@@ -57,8 +57,9 @@
             android:layout_alignParentBottom="true"
             android:paddingRight="@dimen/x82"
             android:paddingLeft="@dimen/x20"
-            android:drawablePadding="@dimen/y8"
+            android:drawablePadding="0dp"
             android:drawableTop="@mipmap/mine_no_select_icon"
+            android:gravity="center_horizontal"
             android:textSize="@dimen/small_text_size"
             android:text="我的"
             />
