--- a/dishmap/src/main/res/layout/activity_set_user_info.xml
+++ b/dishmap/src/main/res/layout/activity_set_user_info.xml
@@ -40,6 +40,7 @@
                 android:textSize="@dimen/big_text_size"/>
 
             <EditText
+                android:id="@+id/activity_set_user_info_nick_name_et"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/y57"
                 android:maxLength="30"
@@ -66,6 +67,7 @@
                 android:textSize="@dimen/big_text_size"/>
 
             <EditText
+                android:id="@+id/activity_set_user_info_nick_sex_et"
                 android:maxLength="1"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/y57"
@@ -91,6 +93,7 @@
                 android:textSize="@dimen/big_text_size"/>
 
             <EditText
+                android:id="@+id/activity_set_user_info_nick_birthday_et"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/y57"
                 android:maxLength="30"
@@ -111,15 +114,17 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="账　　号"
+                android:text="手　　机"
                 android:textColor="@color/text_gray_5"
                 android:textSize="@dimen/big_text_size"/>
 
             <EditText
-                android:maxLength="30"
+                android:id="@+id/activity_set_user_info_nick_phone_et"
+                android:maxLength="11"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/y57"
                 android:layout_marginLeft="@dimen/x14"
+                android:inputType="number"
                 android:textColor="@color/text_gray_5"
                 android:textSize="@dimen/big_text_size"
                 android:background="@color/bg_gray_2"
@@ -141,6 +146,7 @@
                 android:textSize="@dimen/big_text_size"/>
 
             <EditText
+                android:id="@+id/activity_set_user_info_nick_region_et"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/y57"
                 android:maxLength="30"
@@ -165,6 +171,7 @@
                 android:textSize="@dimen/big_text_size"/>
 
             <EditText
+                android:id="@+id/activity_set_user_info_nick_introduce_et"
                 android:maxLength="300"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/y233"
@@ -179,6 +186,7 @@
 
 
     <Button
+        android:id="@+id/activity_set_user_info_nick_save_btn"
         android:layout_width="@dimen/x540"
         android:layout_height="@dimen/y88"
         android:background="@mipmap/pay_btn_bg"
