修改我的桌位

--- a/dishmap/src/main/res/layout/activity_my_seat_detail.xml
+++ b/dishmap/src/main/res/layout/activity_my_seat_detail.xml
@@ -13,89 +13,150 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/y273"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/y20"
         android:layout_marginLeft="@dimen/x30"
         android:layout_marginRight="@dimen/x30"
-        android:layout_marginTop="@dimen/y30"
         android:background="@drawable/white_bg_radius_5"
-        android:gravity="center_vertical"
-        android:paddingLeft="@dimen/x40"
-        android:paddingRight="@dimen/x40">
-
-        <TextView
-            android:layout_width="@dimen/x110"
-            android:layout_height="@dimen/x110"
-            android:background="@drawable/white_bg_orange_stroke"
-            android:gravity="center"
-            android:text="5人\n桌"
-            android:textColor="@color/orange_color"
-            android:textSize="@dimen/big_text_size_2" />
+        android:orientation="vertical">
 
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/y273"
             android:layout_marginLeft="@dimen/x30"
-            android:orientation="vertical">
+            android:layout_marginRight="@dimen/x30"
+            android:layout_marginTop="@dimen/y30"
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingLeft="@dimen/x40"
+            android:paddingRight="@dimen/x40">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="0"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/big_text_size" />
-
-
-            </RelativeLayout>
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="状态："
-                    android:textColor="@color/text_gray_2"
-                    android:textSize="@dimen/small_text_size" />
-
-            </LinearLayout>
+            <TextView
+                android:layout_width="@dimen/x110"
+                android:layout_height="@dimen/x110"
+                android:background="@drawable/white_bg_orange_stroke"
+                android:gravity="center"
+                android:text="5人\n桌"
+                android:textColor="@color/orange_color"
+                android:textSize="@dimen/big_text_size_2" />
 
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/x30"
                 android:orientation="vertical">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/very_big_text_size" />
+
+                </RelativeLayout>
+
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/y20"
                     android:orientation="horizontal">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="@dimen/big_text_size"
-                        android:text="号码"/>
+                        android:text="有效期："
+                        android:textColor="@color/text_gray_2"
+                        android:textSize="@dimen/small_text_size" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="@dimen/very_big_text_size"
-                        android:text="00000"/>
-
+                        android:text=""
+                        android:textColor="@color/text_gray_2"
+                        android:textSize="@dimen/small_text_size" />
                 </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/y20"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="注意："
+                        android:textColor="@color/text_gray_2"
+                        android:textSize="@dimen/small_text_size" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=""
+                        android:textColor="@color/text_gray_2"
+                        android:textSize="@dimen/small_text_size" />
+                </LinearLayout>
+
+
 
             </LinearLayout>
 
+
+
+
         </LinearLayout>
 
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="bottom"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/big_text_size"
+                    android:textColor="@color/text_gray_design_1"
+                    android:includeFontPadding="false"
+                    android:paddingBottom="@dimen/y10"
+                    android:text="号码"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:includeFontPadding="false"
+                    android:textSize="@dimen/very_big_text_size_2"
+                    android:textColor="@color/text_gray_design_1"
+                    android:gravity="bottom"
+                    android:text="00000"/>
+
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/activity_my_seat_detail_qr_code_iv"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/y400"
+                android:layout_marginBottom="@dimen/y40"
+                />
+        </LinearLayout>
+
+
     </LinearLayout>
+
 
 </LinearLayout>
