--- a/dishmap/src/main/res/layout/activity_my_seat.xml
+++ b/dishmap/src/main/res/layout/activity_my_seat.xml
@@ -11,140 +11,11 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/y128"></include>
 
-    <LinearLayout
-        android:id="@+id/activity_my_seat_detail_content_ll"
+    <ListView
+        android:id="@+id/activity_my_seat_content_lv"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/y273"
-        android:layout_marginLeft="@dimen/x30"
-        android:layout_marginRight="@dimen/x30"
-        android:paddingLeft="@dimen/x40"
-        android:paddingRight="@dimen/x40"
-        android:layout_marginTop="@dimen/y30"
-        android:background="@drawable/white_bg_radius_5"
-        android:gravity="center_vertical">
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:layout_width="@dimen/x110"
-            android:layout_height="@dimen/x110"
-            android:background="@drawable/white_bg_orange_stroke"
-            android:gravity="center"
-            android:text="5人\n桌"
-            android:textColor="@color/orange_color"
-            android:textSize="@dimen/big_text_size_2" />
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/x30"
-            android:orientation="vertical">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="0"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/big_text_size" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:text="0"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/big_text_size" />
-
-            </RelativeLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="号码："
-                    android:textColor="@color/text_gray_2"
-                    android:textSize="@dimen/normal_text_size" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="0"
-                    android:textColor="@color/text_gray_2"
-                    android:textSize="@dimen/normal_text_size" />
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="手机号："
-                    android:textColor="@color/text_gray_2"
-                    android:textSize="@dimen/normal_text_size" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="0"
-                    android:textColor="@color/text_gray_2"
-                    android:textSize="@dimen/normal_text_size" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="时间："
-                    android:textColor="@color/text_gray_2"
-                    android:textSize="@dimen/normal_text_size" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="0"
-                    android:textColor="@color/text_gray_2"
-                    android:textSize="@dimen/normal_text_size" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="状态："
-                    android:textColor="@color/text_gray_2"
-                    android:textSize="@dimen/normal_text_size" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="0"
-                    android:textColor="@color/text_gray_2"
-                    android:textSize="@dimen/normal_text_size" />
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </LinearLayout>
+    </ListView>
 
 </LinearLayout>
