--- a/dishmap/src/main/res/layout/activity_my_seat_detail.xml
+++ b/dishmap/src/main/res/layout/activity_my_seat_detail.xml
@@ -54,6 +54,7 @@
                     android:layout_height="wrap_content">
 
                     <TextView
+                        android:id="@+id/activity_my_seat_detail_store_name_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="0"
@@ -77,6 +78,7 @@
                         android:textSize="@dimen/small_text_size" />
 
                     <TextView
+                        android:id="@+id/activity_my_seat_detail_expire_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text=""
@@ -98,6 +100,7 @@
                         android:textSize="@dimen/small_text_size" />
 
                     <TextView
+                        android:id="@+id/activity_my_seat_detail_description_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text=""
@@ -137,6 +140,7 @@
                     android:text="号码"/>
 
                 <TextView
+                    android:id="@+id/activity_my_seat_detail_number_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:includeFontPadding="false"
