--- a/dishmap/src/main/res/layout/no_data_layout.xml
+++ b/dishmap/src/main/res/layout/no_data_layout.xml
@@ -6,7 +6,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center">
+        android:gravity="center_horizontal">
 
         <TextView
             android:layout_width="wrap_content"
@@ -14,6 +14,7 @@
             android:textSize="@dimen/big_text_size_2"
             android:text="暂无数据"
             android:textColor="#b1afad"
+            android:layout_marginTop="@dimen/y470"
             />
 
 
