--- a/dishmap/src/main/res/values/colors.xml
+++ b/dishmap/src/main/res/values/colors.xml
@@ -34,6 +34,7 @@
     <color name="text_gray_3">#898989</color>
     <color name="text_gary_4">#A6A6A6</color>
     <color name="text_gray_5">#808080</color>
+    <color name="text_gray_6">#A9AAAB</color>
     <color name="text_gray_design_1">#3C3C3C</color>
     <color name="text_gray_design_2">#AAAAAA</color>
 
