--- a/dishmap/src/main/res/layout/activity_scan.xml
+++ b/dishmap/src/main/res/layout/activity_scan.xml
@@ -1,59 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
+    android:orientation="vertical"
     tools:context="com.feasttime.dishmap.activity.ScanActivity">
 
 
-
-
-    <!--<cn.bingoogolapple.qrcode.zxing.ZXingView-->
-        <!--android:id="@+id/zxingview"-->
-        <!--android:layout_width="200dp"-->
-        <!--android:layout_height="200dp"-->
-        <!--app:qrcv_animTime="1000"-->
-        <!--app:qrcv_borderColor="@android:color/white"-->
-        <!--app:qrcv_borderSize="1dp"-->
-        <!--app:qrcv_cornerColor="@color/blue"-->
-        <!--app:qrcv_cornerLength="20dp"-->
-        <!--app:qrcv_cornerSize="3dp"-->
-        <!--app:qrcv_maskColor="#33FFFFFF"-->
-        <!--app:qrcv_rectWidth="200dp"-->
-        <!--app:qrcv_scanLineColor="@color/text_red"-->
-        <!--app:qrcv_scanLineSize="2dp"-->
-        <!--app:qrcv_topOffset="0dp"-->
-        <!--android:layout_centerInParent="true"/>-->
-
-    <cn.bingoogolapple.qrcode.zbar.ZBarView
-        android:id="@+id/zbarview"
+    <include
+        android:id="@+id/title_layout"
+        layout="@layout/title_bar_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:qrcv_animTime="1000"
-        app:qrcv_barCodeTipText="将条码放入框内，即可自动扫描"
-        app:qrcv_barcodeRectHeight="120dp"
-        app:qrcv_borderColor="@android:color/white"
-        app:qrcv_borderSize="1dp"
-        app:qrcv_cornerColor="@color/colorPrimaryDark"
-        app:qrcv_cornerLength="20dp"
-        app:qrcv_cornerSize="3dp"
-        app:qrcv_customGridScanLineDrawable="@mipmap/custom_grid_scan_line"
-        app:qrcv_isBarcode="false"
-        app:qrcv_isCenterVertical="false"
-        app:qrcv_isOnlyDecodeScanBoxArea="false"
-        app:qrcv_isShowDefaultGridScanLineDrawable="true"
-        app:qrcv_isShowDefaultScanLineDrawable="true"
-        app:qrcv_isShowTipBackground="true"
-        app:qrcv_isShowTipTextAsSingleLine="false"
-        app:qrcv_isTipTextBelowRect="false"
-        app:qrcv_maskColor="#33FFFFFF"
-        app:qrcv_qrCodeTipText="将二维码/条码放入框内，即可自动扫描"
-        app:qrcv_rectWidth="200dp"
-        app:qrcv_scanLineColor="@color/colorPrimaryDark"
-        app:qrcv_toolbarHeight="56dp"
-        app:qrcv_topOffset="200dp"/>
+        android:layout_height="@dimen/y128"></include>
+
+    <com.mylhyl.zxing.scanner.ScannerView
+        android:id="@+id/scanner_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 
-</RelativeLayout>
+
+
+</LinearLayout>
